--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -36,7 +36,7 @@ In \cref{lst:hash} we see that a random string is generated in line one, then co
 \subsection*{Hard-coded passwords}
 In our connection to Cisco as well as to the intermediate server we are currently using hard-coded passwords, which means that everyone with access to the code have the log-in information. These should be hashed and stored such that the log-in can not be seen in the code and is never seen as plain text. 
 
-\subsection*{Visibility}\ofx{may be moved to refactoring}
+\subsection*{Visibility}
 As of now the most of our system is public, by decreasing the level of visibility to have more private and protected classes and methods, the system would be more secure.
  
 \subsection*{Obfuscate personal information}
