--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -21,7 +21,7 @@ Each access point should be place 50-70 feet away from each other in order to ge
 	\centering
 	\includegraphics[scale=0.5]{graphics/access_placement.png}
 	\label{fig:access_placement}
-	\caption{Illustration of how access points should be placed.}
+	\caption{Illustration of how access points should be placed\cite{access_point_placement}.}
 \end{figure}
 
 An overview of our system setup can be seen in \cref{fig:OwnSetup}. This setup follows the previous design guidelines. One router is set up in the middle and four access points are set up in our group rooms, such that it covers three group rooms.
