--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -28,13 +28,13 @@ It have been requested by the heatmap application group to have a unique identif
 Java have a hash-method implemented in the object class called \textit{hashCode()}, this may be used for hashing information. When using a hash function properly, you add a random generated string that extends the original message. The generated string is called a salt and make the hash function more secure. An example of how to apply the Java hashCode can be seen in \cref{lst:hash}.
 \begin{lstlisting}[caption={Hash a MAC-Address},label={lst:hash},language=inc_Java]
 String salt = UUID.randomUUID().toString();
-hash = MAC\_Address + salt;
+hash = MAC_Address + salt;
 hash.hashCode();
 \end{lstlisting}
 In \cref{lst:hash} we see that a random string is generated in line one, then concatenated with the information we wish to hash, in this case the MAC-Address. Finally we call the Java hashCode() on the string, and this gives us a string that can not be traced back to the original.
 
 \subsection*{Hard-coded passwords}
-In our connection to Cisco as well as to the intermediate server we are currently using hard-coded passwords, which means that everyone with access to the code have the log-in information. These should be hashed and stored such that the log-in can not be seen in the code and is never seen as plain text. 
+In our connection to Cisco as well as to the intermediate server we are currently using hard-coded passwords, which means that everyone with access to the code can find the log-in information. These should be hashed and stored such that the log-in can not be seen in the code and is never written as plain text. 
 
 \subsection*{Visibility}
 As of now the most of our system is public, by decreasing the level of visibility to have more private and protected classes and methods, the system would be more secure.
