Added Conclusion to building our own tracking system

--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -38,10 +38,11 @@ We tested the Ubiquiti equipment, with the original firmware. At first glance we
 
 This caused us to research custom firmware for the router. By installing new firmware on the router we will be able to get root access to the router, and thereby manipulate it at a lower level than the routers original firmware allows. This is necessary if we are to capture every RX signal the router gets.
 
-We did find custom firmware for Ubiquiti, however not for D-link. The searched sites were: openwrt.org\sfx{cite?}, polarcloud.com\ofx{cite?}, dd-wrt.com\sfx{cite?}, gargolye-router.com\ofx{cite?}, librecmc.org\ofx{cite?} and wrtrouters.com\ofx{cite?}. These sites cover thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because the particular model we ordered\ofx{something is missing} because other routers from the same brand is supported. No conclusion was found as to why it is not covered on any of the websites.
+We did find custom firmware for Ubiquiti, however not for D-link. The searched sites were: openwrt, polarcloud, dd-wrt, gargolye-router, librecmc and wrtrouters. These sites cover thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because the particular model we ordered\ofx{something is missing} because other routers from the same brand is supported. No conclusion was found as to why it is not covered on any of the websites.
 
 We ended up utilizing the openwrt because it supports our Ubiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed there is roughly 8Mb of free memory left on the router. This put some limitations on which language we can use. Our first attempt is to use a version of python called Mini-Python that does not exceed the memory limit.
 
-A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this either due to space consumption.
+A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this.
 
-/jfx{Nuværende konklusion, vi kan fange pakker, hvis devicen er forbundet til vores netwærk eller de selv har tænkt for internet deling. Det er dog ikke muligt at få RSSI (signal styrke), der er ikke fundet nogen defintive årsag til dette, men formoder at det kan skyldes driverne på routeren (openwrt).}
+\section*{Conclusion}
+The progress we have made in building our own tracking system is as follow: We were able to update the firmware on the Ubiquiti router, this was required to run programs with root access to use the network interface. With a program running we could get the package information, but it dose not contain the RSSI (Received signal strength indication), this may be because of the network drivers installed on the router, but not confirmation was done. 
