stuff happend today.

--- a/1sprint/permission.tex
+++ b/1sprint/permission.tex
@@ -11,4 +11,4 @@ However, the Danish Business Authority's conclusion was that the system did not 
 %http://eur-lex.europa.eu/legal-content/DA/TXT/PDF/?uri=CELEX:31995L0046&from=da
 To ensure no such debates are raised in relation to this project, it will be necessary to differ between those who have given their permission to store person sensitive data and those who have not. By differentiating between the two it will be possible to obfuscate and remove personal data for individuals who has not given their acceptance.
 
-We will use the term person sensitive data when referring to data that can be used to identify and track a person. 
+We will use the term person sensitive data when referring to data that can be used to identify a person. 
