--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,12 +1,9 @@
 \chapter{Sprint 4}
-
-One chapter per development cycle (i.e., one chapter per sprint) performed in the project documenting the analysis, design, refactoring, implementation and test performed in that cycle.
-
-Each cycle may contain more or less of each of these elements.
-This chapter covers the “design of an application that handles a substantial part of this” and “development of a program that realizes the design”
+This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3, it includes hashing password and mac-addresses and enabling HTTPS on our server.
 
 \input{sprint4/refactor}
 \input{sprint4/our_system}
 \input{sprint4/pers_server}
+\input{sprint4/our_server}
 
 \section{Sprint 4 review}
