--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -1,21 +1,21 @@
 \section{Building our own tracking system using routers and hotspots}
-This section will cover the advancements made in building and gathering information about routers and hotspots to make our own Indoor Location-Based System (ILBS). A list of objectives can be seen below. The primary goal is enabling us to calculate our position in geo-coordinates, in order to compare it with the coordinates provided by Cisco MSE.
+This section will cover the progress made in building and researching routers and hotspots to make our own Indoor Positioning System (IPS)\sfx{ILBS? IPS? tracking?}. A list of objectives can be seen below. The primary goal is enabling us to calculate our position in geo-coordinates, in order to compare it with the coordinates provided by Cisco MSE.
 
 \begin{itemize}
 	\item Equipment Requirements
-	\item Test Capabilities of the Router 
+	\item Test Capabilities of the Router
 	\item Test Capabilities of the Access Points
 \end{itemize}
 
 \subsection*{Equipment Requirements}
-The initial requirement for the equipment is that it comes with a wireless antenna supporting 2.4 GHz. It would be advantageous if we set up two different ILBS for the sake of comparison. We decided to buy two brands, allowing us to analyse two ILBS and thus conclude which of the systems performed best, based on the criteria described in section \ref{sec:monitoring}.
+The initial requirement for all equipment is that it supports wireless communication on the 2.4 GHz frequency. It would be advantageous if we set up two different ILBS for the sake of comparison. We decided to buy two brands, allowing us to analyse two ILBS and thus conclude which of the systems performed best, based on the criteria described in section \ref{sec:monitoring}.
 
 Based on the above requirement we found two brands, Ubiquiti and D-link, the latter of which is considered the cheaper brand. We ordered one router, two expensive access points and five cheap access points from each brand.
 
 \subsection*{The physical setup}\ofx{we may want to move this?}
-Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for your system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter which itself may contain a sub-perimeter and so on. This is illustrated in \cref{access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor, as illustrated by the blue line and the sub-perimeter by the red line. Everything on this perimeter is called the \textit{hull}\cite{access_point_placement}.
+Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for a system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter, which itself may contain a sub-perimeter and so on. This is illustrated on figure \ref{access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor, as illustrated by the blue line and the sub-perimeter by the red line. The outer-most perimeter is also known as the \textit{hull}\cite{access_point_placement}.
 
-Each access point should be place 50-70 feet away from each other in order to get a high precision without interference and unnecessary overlap\cite{access_point_range}.
+The access points should be placed at an interval of 50-70 feet to get a high precision without interference and unnecessary overlap\cite{access_point_range}. This radius depends on the reach of the access points and the topology of the building.
 
 \begin{figure}[H]
 	\centering
@@ -24,7 +24,7 @@ Each access point should be place 50-70 feet away from each other in order to ge
 	\caption{Illustration of how access points should be placed\cite{access_point_placement}.}
 \end{figure}
 
-An overview of our system setup can be seen in \cref{fig:OwnSetup}. This setup follows the previous design guidelines. One router is set up in the middle and four access points are set up in our group rooms, such that it covers three group rooms.
+An overview of our system setup can be seen in \cref{fig:OwnSetup}. This setup follows the previous design guidelines. One router is set up in the middle and four access points are set up in our group rooms, such that the system covers three group rooms.
 
 \begin{figure}[H]
 	\centering
