startet writing about our hash

--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -1,4 +1,4 @@
-\section{Security considerations}
+\section{Security considerations}\label{sec:secure}
 In order to increase security in our system, different considerations was made. These considerations are made in order to make it more difficult for outsiders to access the system as well hide sensitive user information except for the mac-address.
 \ofx{tie this to sprint1 security}
 \subsection*{HTTPS and Certificates} 
