--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -45,4 +45,4 @@ We ended up utilizing the openwrt because it supports our Ubiquiti router and al
 A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this.
 
 \section*{Conclusion}
-The progress we have made in building our own tracking system is as follow: We were able to update the firmware on the Ubiquiti router, this was required to run programs with root access to use the network interface. With a program running we could get the package information, but it dose not contain the RSSI (Received signal strength indication), this may be because of the network drivers installed on the router, but not confirmation was done. 
+The progress we have made in building our own tracking system is as following: We were able to update the firmware on the Ubiquiti router, this was required to run programs with root access to use the network interface. With a program running we could get the package information, but it dose not contain the RSSI (Received signal strength indication), this may be because of the network drivers installed on the router, but not confirmation was done. 
