Added sources in building our own tracking system

--- a/bib.bib
+++ b/bib.bib
@@ -318,3 +318,42 @@
 	note = {Accessed 27-4-2016},
 	url ={https://books.google.dk/books?hl=da&lr=&id=MhvcBQAAQBAJ&oi=fnd&pg=PP1&dq=cryptography+hash&ots=AtAEEo2Orx&sig=Ym4eI_DmTvdlwEQl9juD3ur4fhE&redir_esc=y#v=onepage&q&f=false}
 }
+
+@MISC{firmware_1,
+	author = {OpenWrt},
+	title = {Wireless Freedom},
+	note = {Accessed 6-5-2016},
+	url ={https://openwrt.org/}
+
+}@MISC{firmware_2,
+	author = {Polarcloud},
+	title = {Tomato},
+	note = {Accessed 6-5-2016},
+	url ={http://www.polarcloud.com/firmware}
+}
+
+@MISC{firmware_3,
+	author = {dd-wrt.com},
+	title = {Regain your internet freedom},
+	note = {Accessed 6-5-2016},
+	url ={http://www.dd-wrt.com/site/index}
+	
+}@MISC{firmware_4,
+	author = {Gargoyle},
+	title = {A free firmware upgrade for your wireless router},
+	note = {Accessed 6-5-2016},
+	url ={https://www.gargoyle-router.com/}
+}
+
+@MISC{firmware_5,
+	author = {libreCMC},
+	title = {The libre Embedded GNU/Linux Distro},
+	note = {Accessed 6-5-2016},
+	url ={https://librecmc.org/librecmc/home}
+	
+}@MISC{firmware_6,
+	author = {WRTrouters},
+	title = {Your Resource for WRT Routers},
+	note = {Accessed 6-5-2016},
+	url ={http://www.wrtrouters.com/}
+}
