--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -10,7 +10,7 @@ The following chapter describes the initial steps to integrate indoor positionin
 \input{1sprint/security}
 \input{1sprint/cisco_usage}
 
-\section{Sprint evaluation}
+\section{Sprint Evaluation}
 To conclude on the first sprint, we have explored different methods and technologies to perform indoor positioning. Furthermore we have described certain issues related to person sensitive data, and finally we developed an initial design of a RESTful service to operate as an intermediate service for Cisco MSE. 
 
 As such the goals for the first sprint have been fulfilled.
