--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -38,7 +38,7 @@ We tested the Ubiquiti equipment, with the original firmware. At first glance we
 
 This caused us to research custom firmware for the router. By installing new firmware on the router we will be able to get root access to the router, and thereby manipulate it at a lower level than the routers original firmware allows. This is necessary if we are to capture every RX signal the router gets.
 
-We did find custom firmware for Ubiquiti, however not for D-link. The searched sites were: openwrt, polarcloud, dd-wrt, gargolye-router, librecmc and wrtrouters. These sites cover thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because the particular model we ordered\ofx{something is missing} because other routers from the same brand is supported. No conclusion was found as to why it is not covered on any of the websites.
+We did find custom firmware for Ubiquiti, however not for D-link. These sites we used cover thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because of that particular model, because other routers from the same brand is supported. No conclusion was found as to why it is not covered on any of the websites\cite{firmware_1}\cite{firmware_2}\cite{firmware_3}\cite{firmware_4}\cite{firmware_5}\cite{firmware_6}.
 
 We ended up utilizing the openwrt because it supports our Ubiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed there is roughly 8Mb of free memory left on the router. This put some limitations on which language we can use. Our first attempt is to use a version of python called Mini-Python that does not exceed the memory limit.
 
