--- a/3sprint/security.tex
+++ b/3sprint/security.tex
@@ -1,4 +1,4 @@
-\section{Security considerations}
+\section{Security considerations}\label{sec:secure}
 In order to increase the level of security in our system, different considerations should be made. These considerations are made in order to make it more difficult for intruders to break into the system as well as hide personal sensitive information. We limit the discussion to program communication and how we handle personal sensitive information, as this is where we assess the system have the biggest weaknesses.
 \ofx{tie this to sprint1 security} \sfx{Is it necessary to emphasize that we aren't security experts?}
 
