--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -13,7 +13,7 @@ The initial requirement for all equipment is that it supports wireless communica
 Based on the above requirement we found two brands, Ubiquiti and D-link, the latter of which is considered the cheaper brand. We ordered one router, two expensive access points and five cheap access points from each brand.
 
 \subsection*{The physical setup}\ofx{we may want to move this?}
-Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for a system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter, which itself may contain a sub-perimeter and so on. This is illustrated on figure \ref{access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor, as illustrated by the blue line and the sub-perimeter by the red line. The outer-most perimeter is also known as the \textit{hull}\cite{access_point_placement}.
+Cisco\cite{access_point_placement} have guidelines for how to place the access points in order to get the best coverage for a system. They recommend that there is an access point in each corner of the building and some along the perimeters. In addition, if the building is large enough, access points should be placed within the perimeter to form a sub-perimeter, which itself may contain a sub-perimeter and so on. This is illustrated on figure \cref{fig:access_placement}, in which the red circles are access points. The perimeter established by the outer-most access points should encapsulate the entire floor, as illustrated by the blue line and the sub-perimeter by the red line. The outer-most perimeter is also known as the \textit{hull}\cite{access_point_placement}.
 
 The access points should be placed at an interval of 50-70 feet to get a high precision without interference and unnecessary overlap\cite{access_point_range}. This radius depends on the reach of the access points and the topology of the building.
 
