--- a/bib.bib
+++ b/bib.bib
@@ -333,7 +333,7 @@
 }
 
 @MISC{firmware_3,
-	author = {dd-wrt.com},
+	author = {dd-wrt},
 	title = {Regain your internet freedom},
 	note = {Accessed 6-5-2016},
 	url ={http://www.dd-wrt.com/site/index}
