--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -15,7 +15,7 @@ We have had multiple smaller meetings with respectively the groups responsible f
 At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a hotmap, and they only wish for geographical coordinates and the confidence factor for each device.\ofx{someone can confirm this?}
 
 \paragraph{Database meetings}
-At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested by them that all locations are to be stored as geographical coordinates, rather than relative. We told them our initial ideas for what we would like to store, these requirements have since then changed, see \cref{sec:data_store}, and these have been passed on to the database groups through GitLab.
+At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested by them that all locations are to be stored as geographical coordinates, rather than relative.% We told them our initial ideas for what we would like to store, these requirements have since then changed, see \cref{sec:data_store}, and these have been passed on to the database groups through GitLab.
 
 \paragraph{Indoor meetings}
 Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco whereas the other group would get started on the indoor API. There have been a continuous communication between our two groups to keep track of progress and difficulties. 
