--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -40,9 +40,9 @@ This caused us to research custom firmware for the router. By installing new fir
 
 We did find custom firmware for Ubiquiti, however not for D-link. These sites we used cover thousands of routers and the fact that we were not able to find a custom firmware for D-link might be because of that particular model, because other routers from the same brand is supported. No conclusion was found as to why it is not covered on any of the websites\cite{firmware_1}\cite{firmware_2}\cite{firmware_3}\cite{firmware_4}\cite{firmware_5}\cite{firmware_6}.
 
-We ended up utilizing the openwrt because it supports our Ubiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed there is roughly 8Mb of free memory left on the router. This put some limitations on which language we can use. Our first attempt is to use a version of python called Mini-Python that does not exceed the memory limit.
+We ended up utilizing the openwrt because it supports our Ubiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed there is roughly 8Mb of free memory left on the router. This put some limitations on which language we can use. Our first attempt is to use a minimalistic version of Python called Mini-Python that does not exceed the memory limit.
 
-A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this.
+A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this.\sfx{why?}
 
 \section*{Conclusion}
-The progress we have made in building our own tracking system is as following: We were able to update the firmware on the Ubiquiti router, this was required to run programs with root access to use the network interface. With a program running we could get the package information, but it dose not contain the RSSI (Received signal strength indication), this may be because of the network drivers installed on the router, but not confirmation was done. 
+We have made significant progression towards building our own indoor tracking system. First, we updated the firmware of the Ubiquiti router to be able to get root access to use the network interface. With a program running we could get the package information for transmissions, but this information does not contain the RSSI. This may be because of the network drivers installed on the router, but not confirmation was done. 
