--- a/bib.bib
+++ b/bib.bib
@@ -359,3 +359,10 @@
 	note = {Accessed 6-5-2016},
 	url ={http://www.wrtrouters.com/}
 }
+
+@MISC{IPnetworkID,
+	author = {NetBSD Foundation, Inc},
+	title = {Introduction to TCP/IP Networking},
+	note = {Accessed 6-5-2016},
+	url ={https://www.netbsd.org/docs/guide/en/chap-net-intro.html}
+}
