Update til sprint review og intro. Der mangler dog at skrives om security

--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -5,4 +5,11 @@ This sprint aims to explore the possibilities of building our own tracking syste
 \input{3sprint/security}
 
 \section{Sprint review}
-During this sprint we examined the possibility of building a small tracking system with only a tree and our bare hands. We deployed an update for the intermediate service communicating with MSE, fixing several issues and creating support for global coordinates. 
+To perform an evaluation of the sprint we iterate over the sprint goals and comment on whether or not they were fulfilled.
+
+During this sprint we examined the possibility of building a small tracking system utilising access points. The goal was to have a system that is comparable with MSE in terms of the precision of the geo-coordinates. We were not able to make a functional IPS as we were unable to retrive the RSSI from the routers and access points. \Cref{sec:future_system} will function as a guidance and proposal section for how to continue the development of the system.
+
+We deployed an update for the intermediate service communicating with MSE, fixing several issues and creating support for global coordinates. The update was successfully installed and deployed.
+
+%TODO Skriv om security
+\afx{Write the sprint review for security when the conclusion is done}
