--- a/sprint4/our_system.tex
+++ b/sprint4/our_system.tex
@@ -1,4 +1,4 @@
-\section{The future of our tracking system}
+\section{The Future of Our Tracking System}\label{sec:future_system}
 
 \subsection*{Signal Strength}
 
