--- a/3sprint/trackingsystem.tex
+++ b/3sprint/trackingsystem.tex
@@ -43,7 +43,7 @@ We did find custom firmware for Ubiquiti, however not for D-link. These sites we
 
 We ended up utilizing the openwrt because it supports our Ubiquiti router and allows us to gain root access and execute programs. With the new custom firmware installed there is roughly 8Mb of free memory left on the router. This put some limitations on which language we can use. Our first attempt is to use a minimalistic version of Python called Mini-Python that does not exceed the memory limit.
 
-A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to do this.\sfx{why?}
+A program is constructed allowing us to listen on different types of networks such as LAN and WAN. This is done using the socket library which is a standard library in Python. However, it is not part of the minimalistic version, meaning we had to import it ourselves. We were not able to find the library separately and moving the socket library from the lib folder under python to the minimalistic version did not work. Lastly we looked at SmartCampusAAU that is a indoor positioning and navigation system, unfortunately it only cover the mobile apps and not the router set up or firmwares to use.
 
 \section*{Conclusion}
 We have made significant progression towards building our own indoor tracking system. First, we updated the firmware of the Ubiquiti router to be able to get root access to use the network interface. With a program running we could get the package information for transmissions, but this information does not contain the RSSI. This may be because of the network drivers installed on the router, but not confirmation was done. 
