The Sprint review is ready for review

--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -11,5 +11,4 @@ During this sprint we examined the possibility of building a small tracking syst
 
 We deployed an update for the intermediate service communicating with MSE, fixing several issues and creating support for global coordinates. The update was successfully installed and deployed.
 
-%TODO Skriv om security
-\afx{Write the sprint review for security when the conclusion is done}
+The security considerations lead us to be wary of different security pitfalls and sensitive areas of the system. There have been made some decisions regarding what information to obfuscate and what information to keep. It was decided to obfuscate the mac address and E-mail, by hashing the address and deleting the mail information.
