--- a/4sprint/chapter_doc.tex
+++ b/4sprint/chapter_doc.tex
@@ -1,7 +1,11 @@
 \chapter{Sprint 4}
 This is the last sprint and will be dedicated to implementing the last features discovered in sprint 3, it includes hashing password and mac-addresses and enabling HTTPS on our server.
 
-
 \input{4sprint/catch_up}
+\input{4sprint/our_server}
+\input{4sprint/our_system}
+\input{4sprint/pers_server}
+\input{4sprint/refactor}
+\input{4sprint/security}
 
 \section{Sprint 4 review}
