Words have appeared on paper

--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -1,5 +1,5 @@
 \section{Software Quality Assurance}\label{sec:unit_test}
-To ensure correctness of the code and supply future developers with a better understanding of our code, all code has been tested and documented. This is seen as a necessity as there are nine other project groups depending on the code we produce.
+To ensure correctness of the code and supply future developers with a better understanding of our code, all code has been documented and tested were it is important to ensure correct functionality. This is seen as a necessity as there are nine other project groups depending on the code we produce.
 
 \subsection{Code Documentation} \label{sec:code_documentation}
 We have put in additional effort to document the code for future development. This has been done by explaining all non-trivial methods in the program. Specifically, for each method we have described the general functionality as well as the method signature. In addition, links are created between methods calling classes or other methods. 
