--- a/2sprint/geo_locations.tex
+++ b/2sprint/geo_locations.tex
@@ -1,5 +1,5 @@
 \section{Geographical Locations} \label{sec:geo_coordinates}
-There are three formats of geographical coordinates; degrees minutes seconds, degrees decimal minutes and decimal degrees\cite{geo_types}. These are represented at such:
+There are three formats of geographical coordinates; degrees minutes seconds, degrees decimal minutes and decimal degrees\cite{geo_types}, Minutes is indicated by "'" after the number and for seconds it is "''". These are represented at such:
 \begin{itemize}
 	\item Degrees minutes seconds(DMS): 10\degree 12' 30''
 	\item Degrees decimal minutes(DDM): 10\degree 12.5'
@@ -16,8 +16,8 @@ The listing below shows the conversion between the three different types of geog
 		\begin{itemize}
 			\setlength\itemsep{0.00005em}
 			\item $ d = 10\degree $
-			\item $ m = 12' + (30/60)'$
-			\item $DDM = d \cdot m = 10\degree 12.5' $
+			\item $ m = 12' + (30/60)$'
+			\item $DDM = d \cdot m = 10\degree 12.5$'
 		\end{itemize}
 		\item To decimal degrees ($DD$)
 		\begin{itemize}
@@ -33,9 +33,9 @@ The listing below shows the conversion between the three different types of geog
 		\begin{itemize}
 			\setlength\itemsep{0.00005em}
 			\item $ d = 10\degree $
-			\item $ m = \floor{12.5}' = 12' $
-			\item $ s = (12.5 \mod 1) * 60'' = 30''$
-			\item $ DMS = d \cdot m \cdot s = 10\degree 12' 30''$
+			\item $ m = \floor{12.5}$'$ = 12$'
+			\item $ s = (12.5 \mod 1) * 60$''$ = 30$''
+			\item $ DMS = d \cdot m \cdot s = 10\degree 12$'$ 30$''
 		\end{itemize}
 		\item To decimal degrees ($DD$)
 		\begin{itemize}
@@ -51,17 +51,17 @@ The listing below shows the conversion between the three different types of geog
 		\begin{itemize}
 			\setlength\itemsep{0.00005em}
 			\item $ d = dd \mod 1 = 10\degree $
-			\item $ md = (dd - d) * 60' $
-			\item $ m = md \mod 1 = 12' $
-			\item $ s = (md - m) * 60'' = 30''$
-			\item $ DMS = d \cdot m \cdot s = 10\degree 12' 30''$ 
+			\item $ md = (dd - d) * 60$' 
+			\item $ m = md \mod 1 = 12$' 
+			\item $ s = (md - m) * 60$''$ = 30$''
+			\item $ DMS = d \cdot m \cdot s = 10\degree 12$'$ 30$'' 
 		\end{itemize}
 		\item To degrees decimal minutes ($DDM$)
 		\begin{itemize}
 			\setlength\itemsep{0.00005em}
 			\item $ d = dd \mod 1 = 10\degree $
-			\item $ dm = (dd - d) * 60' = 12.5' $
-			\item $ DDM = d \cdot dm = 10\degree 12.5'$
+			\item $ dm = (dd - d) * 60' = 12.5$'
+			\item $ DDM = d \cdot dm = 10\degree 12.5$'
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
