--- a/2sprint/unit_test.tex
+++ b/2sprint/unit_test.tex
@@ -8,7 +8,7 @@ After a presentation of Java-Doc at the super-group meeting on March 31, Java-Do
 As we finish documenting segments of the code, we generate a Java-Doc, which is a .pdf document listing methods and their description, and upload it to the Wiki page on GitLab for other members of the project to see. The links in the comments are transferred to the Java-doc, enabling interactive documentation. 
 Doing this is a continuous process and will be continued throughout the entire project, whenever code undergoes change as well as when additions are made.
 
-\sfx{write about testdriven development in discussion}
+\sfx{write about testdriven development in discussion.}
 
 \subsection{Code Testing}
 Many of the aStep components communicate with each other by calling methods or sharing data. These dependencies introduce a requirement for correctness of code across the project. Consequently, unit tests are created to ensure functionality behaves according to the specification. The tests can be used to simulate the characteristics of the usage of the code and ensure that edge cases and unintended uses are handled properly. 
